# smile4money

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FIXES_COMPLETED.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  ISSUES_51_54_CLARIFICATION.md  ISSUES_51_54_STATUS.md  ISSUES_CHECKLIST.md  README.md  SENIOR_DEV_SUMMARY.md  TECHNICAL_DEEP_DIVE.md  WORK_COMPLETED.md  code_review.md  environments.toml  issues.md
.github/workflows/: audit.yml  ci.yml  deploy.yml
.kiro/settings/: lsp.json
apps/backend/tests/integration/: issue-67.test.ts  issue-68.test.ts
apps/frontend/tests/forms/: validation.test.ts
contracts/escrow/: Cargo.toml  TODO.md
contracts/escrow/src/: errors.rs  lib.rs  tests.rs  types.rs
contracts/oracle/: Cargo.toml
contracts/oracle/src/: errors.rs  lib.rs  types.rs
docs/: api-reference.md  architecture.md  contributing.md  infrastructure.md  issue-1-initialize-guard.md  issue-2-oracle-initialize-guard.md  issue-oracle-result-not-found.md  oracle.md  roadmap.md  security.md
scripts/: build.sh  deploy_mainnet.sh  deploy_testnet.sh  test.sh
