[workspace]
members = [
    "contracts/escrow",
    "contracts/oracle",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "22.0.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
